--- a/app/frontendfile/index.html
+++ b/app/frontendfile/index.html
@@ -410,10 +410,10 @@
                     <div class="single_footer_part">
                         <h4>Company</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">About</a></li>
-                            <li><a href="">News</a></li>
-                            <li><a href="">FAQ</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="">Nguyễn Anh Tuấn</a></li>
+                            <li><a href="">Phạm Ích Dương</a></li>
+                            <li><a href="">Hà Anh Hùng</a></li>
+                            <li><a href="">Lê Minh Hoàng</a></li>
                         </ul>
                     </div>
                 </div>
@@ -421,18 +421,18 @@
                     <div class="single_footer_part">
                         <h4>Address</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">200, Green block, NewYork</a></li>
-                            <li><a href="#">+10 456 267 1678</a></li>
-                            <li><span>contact89@winter.com</span></li>
+                            <li><a href="#">Đại học công nghệ - Đại học quốc gia Hà Nội</a></li>
+                            <li><a href="#">+84123456789</a></li>
+                            <li><span>group20@gmail.com</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_footer_part">
-                        <h4>Newsletter</h4>
+                        <h4>Contact us</h4>
                         <div id="mc_embed_signup">
                             <form target="_blank"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                                action=""
                                 method="get" class="subscribe_form relative mail_part">
                                 <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
                                     class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
@@ -461,7 +461,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </div>
         </div>
     </footer>
-    <!--::footer_part end::-->
 
     <!-- jquery plugins here-->
     <script src="js/jquery-1.12.1.min.js"></script>
