--- a/app/frontendfile/tracking.html
+++ b/app/frontendfile/tracking.html
@@ -200,76 +200,75 @@
   <!--::subscribe_area part end::-->
 
   <!--::footer_part start::-->
-  <footer class="footer_part">
-      <div class="container">
-          <div class="row justify-content-between">
-              <div class="col-sm-6 col-lg-2">
-                  <div class="single_footer_part">
-                      <h4>Category</h4>
-                      <ul class="list-unstyled">
-                          <li><a href="#">Male</a></li>
-                          <li><a href="#">Female</a></li>
-                          <li><a href="#">Shoes</a></li>
-                          <li><a href="#">Fashion</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-sm-6 col-lg-2">
-                  <div class="single_footer_part">
-                      <h4>Company</h4>
-                      <ul class="list-unstyled">
-                          <li><a href="">About</a></li>
-                          <li><a href="">News</a></li>
-                          <li><a href="">FAQ</a></li>
-                          <li><a href="">Contact</a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                  <div class="single_footer_part">
-                      <h4>Address</h4>
-                      <ul class="list-unstyled">
-                          <li><a href="#">200, Green block, NewYork</a></li>
-                          <li><a href="#">+10 456 267 1678</a></li>
-                          <li><span>contact89@winter.com</span></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-sm-6 col-lg-4">
-                  <div class="single_footer_part">
-                      <h4>Newsletter</h4>
-                      <div id="mc_embed_signup">
-                          <form target="_blank"
-                              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                              method="get" class="subscribe_form relative mail_part">
-                              <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-                                  class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-                                  onblur="this.placeholder = ' Email Address '">
-                              <button type="submit" name="submit" id="newsletter-submit"
-                                  class="email_icon newsletter-submit button-contactForm">subscribe</button>
-                              <div class="mt-10 info"></div>
-                          </form>
-                      </div>
-                      <div class="social_icon">
-                          <a href="#"><i class="ti-facebook"></i></a>
-                          <a href="#"><i class="ti-twitter-alt"></i></a>
-                          <a href="#"><i class="ti-instagram"></i></a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="row justify-content-center">
-              <div class="col-lg-12">
-                  <div class="copyright_text">
-                      <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    <footer class="footer_part">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-sm-6 col-lg-2">
+                    <div class="single_footer_part">
+                        <h4>Category</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Male</a></li>
+                            <li><a href="#">Female</a></li>
+                            <li><a href="#">Shoes</a></li>
+                            <li><a href="#">Fashion</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-2">
+                    <div class="single_footer_part">
+                        <h4>Company</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="">Nguyễn Anh Tuấn</a></li>
+                            <li><a href="">Phạm Ích Dương</a></li>
+                            <li><a href="">Hà Anh Hùng</a></li>
+                            <li><a href="">Lê Minh Hoàng</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                    <div class="single_footer_part">
+                        <h4>Address</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Đại học công nghệ - Đại học quốc gia Hà Nội</a></li>
+                            <li><a href="#">+84123456789</a></li>
+                            <li><span>group20@gmail.com</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4">
+                    <div class="single_footer_part">
+                        <h4>Contact us</h4>
+                        <div id="mc_embed_signup">
+                            <form target="_blank"
+                                action=""
+                                method="get" class="subscribe_form relative mail_part">
+                                <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
+                                    class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
+                                    onblur="this.placeholder = ' Email Address '">
+                                <button type="submit" name="submit" id="newsletter-submit"
+                                    class="email_icon newsletter-submit button-contactForm">subscribe</button>
+                                <div class="mt-10 info"></div>
+                            </form>
+                        </div>
+                        <div class="social_icon">
+                            <a href="#"><i class="ti-facebook"></i></a>
+                            <a href="#"><i class="ti-twitter-alt"></i></a>
+                            <a href="#"><i class="ti-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="copyright_text">
+                        <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://github.com/NaTaShaRMN/ecommerce-django" target="_blank">Group 20</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
-  <!--::footer_part end::-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <!-- jquery plugins here-->
   <!-- jquery -->
